--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -557,9 +557,9 @@
   <x:String x:Key="Text.Statistics.Committer" xml:space="preserve">提交者</x:String>
   <x:String x:Key="Text.Statistics.ThisMonth" xml:space="preserve">本月</x:String>
   <x:String x:Key="Text.Statistics.ThisWeek" xml:space="preserve">本周</x:String>
-  <x:String x:Key="Text.Statistics.ThisYear" xml:space="preserve">最近一年</x:String>
+  <x:String x:Key="Text.Statistics.MostRecentYear" xml:space="preserve">最近一年</x:String>
   <x:String x:Key="Text.Statistics.TotalCommits" xml:space="preserve">提交次数: </x:String>
-  <x:String x:Key="Text.Statistics.TotalCommitters" xml:space="preserve">提交者: </x:String>
+  <x:String x:Key="Text.Statistics.TotalAuthors" xml:space="preserve">贡献者人数: </x:String>
   <x:String x:Key="Text.Submodule" xml:space="preserve">子模块</x:String>
   <x:String x:Key="Text.Submodule.Add" xml:space="preserve">添加子模块</x:String>
   <x:String x:Key="Text.Submodule.CopyPath" xml:space="preserve">复制路径</x:String>
