enhance: remember the width of author name column in histories view (#425)

--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -609,6 +609,7 @@
         <ContentControl.DataTemplates>
           <DataTemplate DataType="vm:Histories">
             <v:Histories CurrentBranch="{Binding Repo.CurrentBranch}"
+                         AuthorNameColumnWidth="{Binding Source={x:Static vm:Preference.Instance}, Path=Layout.HistoriesAuthorColumnWidth, Mode=TwoWay}"
                          IssueTrackerRules="{Binding Repo.Settings.IssueTrackerRules}"
                          NavigationId="{Binding NavigationId}"/>
           </DataTemplate>
