--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -38,7 +38,8 @@
                     Width="32" 
                     Command="{Binding IncrUnified}" 
                     IsVisible="{Binding IsTextDiff}"
-                    ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Incr}">
+                    ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Incr}"
+                    IsEnabled="{Binding IsIncUnifiedEnabled}">
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Lines.Incr}"/>
             </Button>
 
@@ -47,10 +48,20 @@
                     Command="{Binding DecrUnified}" 
                     IsVisible="{Binding IsTextDiff}" 
                     ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Decr}" 
-                    IsEnabled="{Binding UnifiedLines, Converter={x:Static c:IntConverters.IsGreaterThanFour}}">
+                    IsEnabled="{Binding IsDecUnifiedEnabled}">
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Lines.Decr}"/>
             </Button>
 
+            <ToggleButton Classes="line_path"
+                          Width="32" Height="18"
+                          Background="Transparent"
+                          Padding="9,6"
+                          IsChecked="{Binding ExpandEntireFile}"
+                          IsVisible="{Binding IsTextDiff}"
+                          ToolTip.Tip="{DynamicResource Text.Diff.ExpandEntireFile}">
+              <Path Width="13" Height="13" Data="{StaticResource Icons.Lines.Expand}" Margin="0,3,0,0"/>
+            </ToggleButton>
+            
             <ToggleButton Classes="line_path"
                           Width="32" Height="18"
                           Background="Transparent"
