--- a/src/Views/StandaloneCommitMessageEditor.axaml
+++ b/src/Views/StandaloneCommitMessageEditor.axaml
@@ -26,14 +26,10 @@
             Data="{StaticResource Icons.Edit}"
             IsVisible="{OnPlatform True, macOS=False}"/>
 
-      <Grid Grid.Column="0" Classes="caption_button_box" Margin="2,4,0,0" IsVisible="{OnPlatform False, macOS=True}">
-        <Button Classes="caption_button_macos close" Click="CloseWindow">
-          <Grid>
-            <Ellipse/>
-            <Path/>
-          </Grid>
-        </Button>
-      </Grid>
+      <v:CaptionButtonsMacOS Grid.Column="0"
+                             Margin="0,2,0,0"
+                             IsCloseButtonOnly="True"
+                             IsVisible="{OnPlatform False, macOS=True}"/>
 
       <TextBlock Grid.Column="0" Grid.ColumnSpan="3"
                  Classes="bold"
@@ -41,12 +37,9 @@
                  HorizontalAlignment="Center" VerticalAlignment="Center"
                  IsHitTestVisible="False"/>
 
-      <Button Grid.Column="2"
-              Classes="caption_button"
-              Click="CloseWindow"
-              IsVisible="{OnPlatform True, macOS=False}">
-        <Path Data="{StaticResource Icons.Window.Close}"/>
-      </Button>
+      <v:CaptionButtons Grid.Column="2"
+                        IsCloseButtonOnly="True"
+                        IsVisible="{OnPlatform True, macOS=False}"/>
     </Grid>
 
     <StackPanel Grid.Row="1" Orientation="Vertical" Margin="8">
