--- a/src/Views/CaptionButtons.axaml
+++ b/src/Views/CaptionButtons.axaml
@@ -3,12 +3,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SourceGit.Views.CaptionButtons">
+             x:Class="SourceGit.Views.CaptionButtons"
+             x:Name="ThisControl">
   <StackPanel Orientation="Horizontal">
-    <Button Classes="caption_button" Click="MinimizeWindow">
+    <Button Classes="caption_button" Click="MinimizeWindow" IsVisible="{Binding !#ThisControl.IsCloseButtonOnly}">
       <Path Data="{StaticResource Icons.Window.Minimize}"/>
     </Button>
-    <Button Classes="caption_button max_or_restore_btn" Click="MaximizeOrRestoreWindow">
+    <Button Classes="caption_button max_or_restore_btn" Click="MaximizeOrRestoreWindow" IsVisible="{Binding !#ThisControl.IsCloseButtonOnly}">
       <Path/>
     </Button>
     <Button Classes="caption_button" Click="CloseWindow">
